--- a/components/header.html
+++ b/components/header.html
@@ -1,13 +1,16 @@
 <header>
-  <div class="logo">
-    <h1>Easier/Better/Cooler</h1>
+  <div class="logo-menu">
+    <div class="logo">
+      <h1>Easier/Better/Cooler</h1>
+    </div>
+    <button class="hamburger-menu" aria-label="Open Menu"></button>
   </div>
   <nav>
-    <ul>
-      <li><a href="index.html">Home</a></li>
-      <li><a href="about.html">About</a></li>
-      <li><a href="blog.html">Blog</a></li>
-      <li><a href="contact.html">Contact</a></li>
+    <ul class="nav-links">
+      <li class="nav-link"><a href="index.html">Home</a></li>
+      <li class="nav-link"><a href="about.html">About</a></li>
+      <li class="nav-link"><a href="blog.html">Blog</a></li>
+      <li class="nav-link"><a href="contact.html">Contact</a></li>
     </ul>
   </nav>
 </header>
