--- a/css/styles.css
+++ b/css/styles.css
@@ -1,10 +1,140 @@
-.post-link {
-  cursor: pointer;
-  text-decoration: none;
-  /* other styling for the post links */
+:root {
+  --slate: #111926;
 }
 
-.post-link:hover,
-.post-link:focus {
-  /* styling to indicate hover or focus state */
+body {
+  margin: 0;
+  padding: 50px 10px 0 10px;
+  font-family: "Roboto", sans-serif;
+  line-height: 1.5;
+  max-width: 1440px;
+  min-height: 100vh;
+  color: var(--slate);
+}
+
+img {
+  max-width: 100%;
+  height: auto;
+}
+
+a {
+  color: var(--slate);
+  text-decoration: none;
+  cursor: pointer;
+}
+
+li {
+  list-style: none;
+}
+
+header {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  padding: 5px 0;
+  background-color: #fff;
+  box-shadow: 0 1px 5px rgba(0, 0, 0, 0.15);
+  z-index: 1000;
+}
+
+.logo h1 {
+  font-size: 1.5rem;
+  font-weight: 500;
+  padding-left: 10px;
+  margin: 0;
+}
+
+.logo-menu {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+/* Hamburger Menu Style */
+.hamburger-menu {
+  display: block;
+  position: relative;
+  width: 20px;
+  height: 2px;
+  background-color: var(--slate);
+  border: none;
+  cursor: pointer;
+  transition: transform 0.3s ease;
+  margin-right: 10px;
+}
+
+.hamburger-menu::before,
+.hamburger-menu::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  width: 100%;
+  height: 2px;
+  background-color: var(--slate);
+  transition: transform 0.3s ease;
+}
+
+.hamburger-menu::before {
+  top: -7px;
+}
+
+.hamburger-menu::after {
+  top: 7px;
+}
+
+.hamburger-menu.open {
+  transform: rotate(45deg);
+}
+
+.hamburger-menu.open::before {
+  transform: rotate(90deg);
+  top: 0;
+}
+
+.hamburger-menu.open::after {
+  transform: rotate(90deg);
+  top: 0;
+}
+
+nav .nav-links {
+  display: none;
+  flex-direction: column;
+}
+
+nav .nav-links.show {
+  display: grid;
+  width: 100%;
+  text-align: left;
+  background-color: #fff;
+  text-align: center;
+}
+
+.nav-links {
+  font-size: 1.2rem;
+  padding: 50px 0;
+  text-align: center;
+  gap: 1em;
+}
+
+header.scrolled {
+  background-color: #f8f8f8;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+@media screen and (min-width: 769px) {
+  .logo {
+    display: grid;
+    margin: 0 auto;
+  }
+
+  .hamburger-menu {
+    display: none;
+  }
+
+  nav ul {
+    display: flex;
+    flex-direction: row;
+    gap: 20px;
+  }
 }
