improved styles for posts

--- a/components/header.html
+++ b/components/header.html
@@ -3,7 +3,9 @@
     <div class="logo">
       <h1>Easier/Better/Cooler</h1>
     </div>
-    <button class="hamburger-menu" aria-label="Open Menu"></button>
+    <div class="hamburger-container">
+      <button class="hamburger-menu" aria-label="Open Menu"></button>
+    </div>
   </div>
   <nav>
     <ul class="nav-links">
