--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,6 @@
 :root {
   --slate: #111926;
+  --text: #7a7a7a;
 }
 
 body {
@@ -34,7 +35,6 @@ header {
   width: 100%;
   padding: 5px 0;
   background-color: #fff;
-  box-shadow: 0 1px 5px rgba(0, 0, 0, 0.15);
   z-index: 1000;
 }
 
@@ -52,6 +52,12 @@ header {
 }
 
 /* Hamburger Menu Style */
+.hamburger-container {
+  padding: 10px;
+  cursor: pointer;
+  display: inline-block;
+}
+
 .hamburger-menu {
   display: block;
   position: relative;
@@ -59,9 +65,8 @@ header {
   height: 2px;
   background-color: var(--slate);
   border: none;
-  cursor: pointer;
   transition: transform 0.3s ease;
-  margin-right: 10px;
+  /* margin-right: 0; */
 }
 
 .hamburger-menu::before,
@@ -76,11 +81,11 @@ header {
 }
 
 .hamburger-menu::before {
-  top: -7px;
+  top: -6px;
 }
 
 .hamburger-menu::after {
-  top: 7px;
+  top: 6px;
 }
 
 .hamburger-menu.open {
@@ -120,6 +125,38 @@ nav .nav-links.show {
 header.scrolled {
   background-color: #f8f8f8;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+.post img {
+  max-height: 250px;
+  width: 100%;
+  object-fit: cover;
+}
+
+/* Title of the post */
+.post h3 {
+  font-size: 24px;
+  line-height: 1.2;
+  margin: 5px 0 10px 0;
+  /* text-transform: uppercase; */
+  letter-spacing: 1px;
+  color: var(--slate);
+  font-weight: 500;
+}
+
+/* Excerpt */
+.post p {
+  color: var(--text);
+  font-weight: 300;
+  line-height: 1.6;
+  text-shadow: 1px 1px 0 rgba(255, 255, 255, 0.6);
+}
+
+/* Post container */
+.post {
+  padding-bottom: 1em;
+  border-bottom: 1px solid #ebebeb;
+  margin-bottom: 3em;
 }
 
 @media screen and (min-width: 769px) {
