--- a/css/carousel.css
+++ b/css/carousel.css
@@ -4,7 +4,8 @@
   overflow: hidden;
   height: 270px;
   width: calc(100% + 20px);
-  margin: 0 -10px 0 -10px;
+  max-width: 960px;
+  margin: 0 -10px 50px -10px;
 }
 
 .carousel-slide {
@@ -94,4 +95,19 @@
 .material-icons-outlined {
   font-size: 32px;
   color: #000;
+}
+
+@media screen and (min-width: 769px) {
+  .carousel-container {
+    height: 570px;
+    margin: 0 auto 50px auto;
+  }
+
+  .carousel-slide img {
+    height: 550px;
+  }
+
+  .carousel-slide::before {
+    height: 550px;
+  }
 }
