--- a/components/header.html
+++ b/components/header.html
@@ -9,10 +9,22 @@
   </div>
   <nav>
     <ul class="nav-links">
-      <li class="nav-link"><a href="index.html">Home</a></li>
-      <li class="nav-link"><a href="about.html">About</a></li>
-      <li class="nav-link"><a href="blog.html">Blog</a></li>
-      <li class="nav-link"><a href="contact.html">Contact</a></li>
+      <li class="nav-link">
+        <a href="/index.html">Home</a>
+        <div class="styled-active-link"></div>
+      </li>
+      <li class="nav-link">
+        <a href="/about.html">About</a>
+        <div class="styled-active-link"></div>
+      </li>
+      <li class="nav-link">
+        <a href="/blog.html">Blog</a>
+        <div class="styled-active-link"></div>
+      </li>
+      <li class="nav-link">
+        <a href="/contact.html">Contact</a>
+        <div class="styled-active-link"></div>
+      </li>
     </ul>
   </nav>
 </header>
