--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,6 @@
 :root {
   --slate: #111926;
+  --hoverSlate: #292e37;
   --text: #7a7a7a;
   --bg: #fafafd;
 }
@@ -23,7 +24,7 @@ body {
 }
 
 main {
-  flex: 1;
+  /* flex: 1; */
 }
 
 img {
@@ -49,6 +50,8 @@ header {
   padding: 5px 0;
   background-color: #fff;
   z-index: 1000;
+  transition: all 0.2s ease-in-out;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 
 .logo h1 {
@@ -78,7 +81,6 @@ header {
   background-color: var(--slate);
   border: none;
   transition: transform 0.3s ease;
-  /* margin-right: 0; */
 }
 
 .hamburger-menu::before,
@@ -123,7 +125,6 @@ nav .nav-links.show {
   display: grid;
   width: 100%;
   text-align: left;
-  background-color: #fff;
   text-align: center;
 }
 
@@ -134,9 +135,19 @@ nav .nav-links.show {
   gap: 1em;
 }
 
+.nav-link a {
+  padding: 4px 80px;
+}
+
+.nav-link a.active {
+  background-color: rgb(249, 249, 145);
+  border-radius: 5px;
+}
+
 header.scrolled {
   background-color: #f8f8f8;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  transition: all 0.2s ease-in-out;
 }
 
 footer {
@@ -156,19 +167,40 @@ footer {
   color: var(--slate);
   font-size: 1.1rem;
   font-weight: 300;
+  line-height: 1.6;
+  text-shadow: 1px 1px 0 rgba(255, 255, 255, 0.6);
   text-align: justify;
   letter-spacing: 1px;
   line-height: 1.5;
   background-color: var(--bg);
 }
 
+.heading-container {
+  display: flex;
+  justify-content: center;
+}
+
 .heading {
+  position: relative;
   text-align: center;
   font-weight: 500;
+  font-size: 1.6rem;
   text-transform: uppercase;
   letter-spacing: 1px;
   color: var(--slate);
-  font-size: 1.3rem;
+  z-index: 1;
+  display: inline-flex;
+  justify-content: center;
+}
+
+.styled-heading {
+  position: absolute;
+  top: 21px;
+  left: -3px;
+  height: 10px;
+  width: 120%;
+  background-color: rgb(249, 249, 145);
+  z-index: -1;
 }
 
 .posts-container {
@@ -232,6 +264,7 @@ footer {
 @media screen and (min-width: 769px) {
   header {
     position: sticky;
+    box-shadow: none;
   }
 
   .logo {
@@ -289,5 +322,15 @@ footer {
     padding: 0;
     gap: 3em;
     font-weight: 300;
+  }
+
+  .nav-link a {
+    padding: 2px 10px;
+  }
+
+  .nav-link a.active {
+    background-color: transparent;
+    text-decoration: underline double;
+    text-underline-offset: 5px;
   }
 }
