--- a/css/post.css
+++ b/css/post.css
@@ -1,7 +1,27 @@
+.post-page {
+  display: grid;
+  grid-template-columns: 44px 2fr 1fr;
+  gap: 20px;
+  margin: 50px auto;
+  justify-content: center;
+  width: fit-content;
+  max-width: calc(44px + 800px + 350px + 20px);
+}
+
+.left-column {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-top: 5em;
+  gap: 2em;
+}
+
 #post-content {
   display: grid;
-  margin: 50px auto;
-  max-width: 760px;
+  max-width: 800px;
+  padding: 10px;
+  background-color: #f5f5f5;
+  box-shadow: 0 0 1px rgba(0, 0, 0, 0.1);
 }
 
 .post-title {
@@ -30,6 +50,16 @@
   border-bottom: 1px solid var(--text);
 }
 
+@media screen and (max-width: 1024px) {
+  .post-page {
+    grid-template-columns: 64px minmax(590px, 760px);
+  }
+
+  .recommended-posts {
+    display: none;
+  }
+}
+
 @media screen and (min-width: 769px) {
   .post-title {
     font-size: 1.8rem;
@@ -46,5 +76,87 @@
       font-size: 1.5rem;
       font-weight: 500;
     }
+  }
+
+  .recommended-posts {
+    max-width: 280px;
+    background-color: #f5f5f5;
+    padding: 10px;
+
+    & h2 {
+      font-size: 0.3rem;
+      font-weight: 300;
+      margin-bottom: 20px;
+      color: var(--slate);
+      text-align: center;
+    }
+  }
+
+  .rec-post-template {
+    margin-bottom: 20px;
+    transition: opacity 0.3s ease-in-out;
+  }
+
+  .rec-post-link {
+    text-decoration: none;
+    color: inherit;
+    transition: opacity 0.3s ease-in-out;
+  }
+
+  .rec-post-title {
+    font-size: 1.1rem;
+    font-weight: 300;
+    margin-bottom: 5px;
+    color: var(--slate);
+  }
+
+  .rec-post-image-container {
+    position: relative;
+    max-height: 160px;
+    width: 100%;
+    overflow: hidden;
+  }
+
+  .rec-post-image {
+    max-height: 220px;
+    width: 100%;
+    object-fit: cover;
+    transition: opacity 0.3s ease-in-out;
+  }
+
+  .rec-post-image-container::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: black;
+    opacity: 0.5;
+    z-index: 1;
+    transition: opacity 0.3s ease-in-out;
+  }
+
+  .rec-post-link:hover .rec-post-image-container::before {
+    opacity: 0.2;
+    transition: opacity 0.3s ease-in-out;
+  }
+
+  .rec-post-link:hover .rec-post-image {
+    opacity: 1;
+    transition: opacity 0.3s ease-in-out;
+  }
+
+  .rec-post-excerpt {
+    color: var(--text);
+    font-size: 0.9rem;
+    font-weight: 300;
+    line-height: 1.6;
+    text-shadow: 1px 1px 0 rgba(255, 255, 255, 0.6);
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 5;
+    -webkit-box-orient: vertical;
   }
 }
