--- a/css/styles.css
+++ b/css/styles.css
@@ -16,16 +16,15 @@ body {
   flex-direction: column;
   min-height: 100vh;
   margin: 0;
-  padding: 50px 10px 0 10px;
+
   font-family: "Roboto", sans-serif;
   line-height: 1.5;
-  max-width: 1440px;
   color: var(--slate);
   selection-color: var(--slate);
 }
 
 main {
-  /* flex: 1; */
+  padding: 50px 10px 0 10px;
 }
 
 img {
@@ -136,6 +135,14 @@ nav .nav-links.show {
   gap: 1em;
 }
 
+.nav-link {
+  transition: transform 0.3s ease;
+
+  &:hover {
+    transform: translateY(-2px);
+  }
+}
+
 .nav-link a {
   padding: 4px 80px;
 }
@@ -149,6 +156,19 @@ header.scrolled {
   background-color: #f8f8f8;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   transition: all 0.2s ease-in-out;
+}
+
+.search-btn {
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+  opacity: 70%;
+  transition: all 0.2s ease-in-out;
+
+  &:hover {
+    opacity: 100%;
+    transition: all 0.2s ease-in-out;
+  }
 }
 
 footer {
@@ -226,7 +246,7 @@ footer {
 .post-options {
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  justify-content: right;
   margin: -10px 0;
 }
 
@@ -266,6 +286,7 @@ footer {
   header {
     position: sticky;
     box-shadow: none;
+    margin-top: 30px;
   }
 
   .logo {
