--- a/css/post.css
+++ b/css/post.css
@@ -1,24 +1,14 @@
 .post-page {
   display: grid;
-  grid-template-columns: 44px 2fr 1fr;
-  gap: 20px;
-  margin: 50px auto;
-  justify-content: center;
-  width: fit-content;
-  max-width: calc(44px + 800px + 350px + 20px);
+  grid-template-columns: 1fr;
+  margin: 50px 0;
 }
 
 .left-column {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  padding-top: 5em;
-  gap: 2em;
+  display: none;
 }
 
 #post-content {
-  display: grid;
-  max-width: 800px;
   padding: 10px;
   background-color: #f5f5f5;
   box-shadow: 0 0 1px rgba(0, 0, 0, 0.1);
@@ -27,46 +17,80 @@
 .post-title {
   font-size: 1.5rem;
   font-weight: 300;
-  margin-bottom: 30px;
+  margin-bottom: 20px;
   color: var(--slate);
 }
 
 .post-header img {
-  max-height: 250px;
+  max-height: 200px;
   width: 100%;
   object-fit: cover;
 }
 
 .post-body {
-  color: var(--text);
   font-size: 1rem;
   font-weight: 300;
   line-height: 1.6;
-  text-shadow: 1px 1px 0 rgba(255, 255, 255, 0.6);
+  color: var(--text);
 }
 
 .post-separator {
-  margin: 50px 0;
+  margin: 30px 0;
   border-bottom: 1px solid var(--text);
 }
 
-@media screen and (max-width: 1024px) {
-  .post-page {
-    grid-template-columns: 64px minmax(590px, 760px);
-  }
-
-  .recommended-posts {
-    display: none;
-  }
+.recommended-posts {
+  display: none;
 }
 
-@media screen and (min-width: 769px) {
-  .post-title {
-    font-size: 1.8rem;
+/* Mid-size devices */
+@media screen and (min-width: 600px) {
+  .post-page {
+    grid-template-columns: 64px 1fr;
+    gap: 1.2em;
+  }
+
+  .left-column {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-top: 3em;
+    gap: 2em;
   }
 
   .post-header img {
     max-height: 400px;
+  }
+
+  .post-opt-icon {
+    transition: all 0.2s ease-in-out;
+    cursor: pointer;
+
+    &:hover {
+      transform: scale(1.1);
+      transition: all 0.2s ease-in-out;
+    }
+  }
+}
+
+/* Desktop devices */
+@media screen and (min-width: 1024px) {
+  .post-page {
+    grid-template-columns: 44px 2fr 1fr;
+    max-width: calc(44px + 800px + 350px + 20px);
+    margin: 50px auto;
+  }
+
+  .left-column {
+    padding-top: 5em;
+  }
+
+  #post-content {
+    max-width: 800px;
+  }
+
+  .post-title {
+    font-size: 1.8rem;
   }
 
   .post-body {
@@ -79,16 +103,19 @@
   }
 
   .recommended-posts {
+    display: block;
     max-width: 280px;
     background-color: #f5f5f5;
     padding: 10px;
 
     & h2 {
-      font-size: 0.3rem;
+      font-size: 1.3rem;
       font-weight: 300;
       margin-bottom: 20px;
       color: var(--slate);
       text-align: center;
+      border-bottom: 1px solid var(--text);
+      padding-bottom: 10px;
     }
   }
 
@@ -106,7 +133,7 @@
   .rec-post-title {
     font-size: 1.1rem;
     font-weight: 300;
-    margin-bottom: 5px;
+    margin: 5px 0;
     color: var(--slate);
   }
 
