--- a/css/styles.css
+++ b/css/styles.css
@@ -289,6 +289,11 @@ footer {
     margin-top: 30px;
   }
 
+  footer {
+    width: 100%;
+    margin: 0;
+  }
+
   .logo {
     display: grid;
     margin: 0 auto;
