--- a/css/post.css
+++ b/css/post.css
@@ -2,16 +2,23 @@
   display: grid;
   grid-template-columns: 1fr;
   margin: 50px 0;
+  min-height: calc(100vh - 50px);
 }
 
 .left-column {
   display: none;
+  position: relative;
+  z-index: 2;
 }
 
 #post-content {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
   padding: 10px;
   background-color: #f5f5f5;
   box-shadow: 0 0 1px rgba(0, 0, 0, 0.1);
+  min-height: 50vh;
 }
 
 .post-title {
@@ -21,6 +28,9 @@
   color: var(--slate);
 }
 
+.post-header {
+  flex-grow: 1;
+}
 .post-header img {
   max-height: 200px;
   width: 100%;
@@ -39,8 +49,78 @@
   border-bottom: 1px solid var(--text);
 }
 
+.post-footer {
+}
+
 .recommended-posts {
   display: none;
+}
+
+.comments-header {
+  display: flex;
+  align-items: center;
+  gap: 0.3em;
+  font-size: 1.2rem;
+  font-weight: 300;
+  margin-bottom: 20px;
+  color: var(--slate);
+
+  & h4 {
+    font-weight: 300;
+  }
+}
+
+.comment-template {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 20px;
+}
+
+.comment-author {
+  display: flex;
+  align-items: center;
+  font-size: 1.1rem;
+  gap: 2em;
+  margin-bottom: 0.5em;
+
+  & .comment-time {
+    display: flex;
+    align-items: center;
+    font-size: 0.8rem;
+    font-weight: 300;
+    gap: 0.8em;
+    color: var(--text);
+  }
+}
+
+.comment-text {
+  font-size: 1rem;
+  font-weight: 300;
+  line-height: 1.6;
+  color: var(--text);
+}
+
+.new-comment textarea {
+  font-family: "Roboto", sans-serif;
+  width: calc(100% - 20px);
+  padding: 10px;
+  margin-bottom: 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  resize: vertical;
+}
+
+.new-comment button {
+  background-color: var(--slate);
+  color: white;
+  padding: 10px 25px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+
+  &:hover {
+    background-color: #0a0a0ad7;
+  }
 }
 
 /* Mid-size devices */
@@ -65,10 +145,134 @@
   .post-opt-icon {
     transition: all 0.2s ease-in-out;
     cursor: pointer;
+    opacity: 0.7;
 
     &:hover {
       transform: scale(1.1);
       transition: all 0.2s ease-in-out;
+      opacity: 1;
+    }
+  }
+
+  .emoji-plus {
+    position: relative;
+    margin-left: 1px;
+    cursor: pointer;
+    padding: 20px 20px 0 20px;
+  }
+
+  .emoji-container {
+    display: none;
+    position: fixed;
+    top: -20px;
+    left: 55px;
+    background-color: #333;
+    border-radius: 5px;
+    padding: 5px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+  }
+
+  .emoji-plus:hover .emoji-container {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    cursor: default;
+  }
+
+  .emoji:hover {
+    background-color: #f5f5f5;
+  }
+
+  .emoji {
+    font-size: 24px;
+    margin: 5px;
+    cursor: pointer;
+    padding: 0 5px;
+    border-radius: 5px;
+  }
+
+  .post-opt-icon.comment,
+  .post-opt-icon.share {
+    position: relative;
+    cursor: pointer;
+  }
+
+  .comment-icon-tooltip {
+    display: none;
+    position: absolute;
+    top: -15px;
+    left: 35px;
+    background-color: #333;
+    color: #fff;
+    font-size: 0.9rem;
+    text-align: center;
+    border-radius: 5px;
+    padding: 5px 10px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+  }
+
+  .post-opt-icon.comment:hover .comment-icon-tooltip {
+    display: block;
+  }
+
+  .share-icon-tooltip {
+    display: none;
+    position: absolute;
+    top: 0px;
+    left: 35px;
+    background-color: #333;
+    color: #fff;
+    font-size: 0.9rem;
+    text-align: center;
+    border-radius: 5px;
+    padding: 5px 10px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+  }
+
+  .post-opt-icon.share:hover .share-icon-tooltip {
+    display: block;
+  }
+
+  .share {
+    display: inline-block;
+
+    &:hover::after {
+      opacity: 1;
+    }
+  }
+
+  .toast {
+    position: fixed;
+    top: 20px;
+    right: 20px;
+    padding: 10px 20px;
+    font-size: 1rem;
+    background-color: #333;
+    color: #fff;
+    border-radius: 5px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+    opacity: 0;
+    z-index: 10000;
+    transform: translateY(-20px);
+    transition: opacity 0.3s ease, transform 0.3s ease;
+
+    &.active {
+      opacity: 1;
+      transform: translateY(0);
+    }
+  }
+
+  .remoji_bar {
+    cursor: default;
+    display: flex;
+    column-gap: 2em;
+    flex-wrap: wrap;
+    padding: 0.5em 0px;
+
+    & img {
+      width: 20px;
+      height: 20px;
+      cursor: pointer;
+      margin-right: 4px;
     }
   }
 }
@@ -87,6 +291,7 @@
 
   #post-content {
     max-width: 800px;
+    z-index: 0;
   }
 
   .post-title {
