--- a/css/styles.css
+++ b/css/styles.css
@@ -20,7 +20,6 @@ body {
   font-family: "Roboto", sans-serif;
   line-height: 1.5;
   color: var(--slate);
-  selection-color: var(--slate);
 }
 
 main {
@@ -40,6 +39,10 @@ a {
 
 li {
   list-style: none;
+}
+
+p {
+  margin: 0;
 }
 
 header {
