--- a/css/loader.css
+++ b/css/loader.css
@@ -1,4 +1,5 @@
-.loader {
+.loader,
+.carousel-loader {
   position: absolute;
   top: 20%;
   left: 44%;
@@ -25,6 +26,10 @@
     border: 3.5px solid;
     opacity: 0.05;
   }
+
+  &.carousel-loader {
+    top: 40%;
+  }
 }
 
 @keyframes spin {
@@ -33,5 +38,16 @@
   }
   to {
     transform: rotate(359deg);
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .loader,
+  .carousel-loader {
+    left: 47.5%;
+
+    &.carousel-loader {
+      top: 45%;
+    }
   }
 }
