--- a/css/post.css
+++ b/css/post.css
@@ -122,6 +122,9 @@
     background-color: #0a0a0ad7;
   }
 }
+.toast {
+  opacity: 0;
+}
 
 /* Mid-size devices */
 @media screen and (min-width: 600px) {
