--- a/components/header.html
+++ b/components/header.html
@@ -1,7 +1,9 @@
 <header>
   <div class="logo-menu">
     <div class="logo">
-      <h1>Easier/Better/Cooler</h1>
+      <a href="/">
+        <h1>Easier/Better/Cooler</h1>
+      </a>
     </div>
     <div class="hamburger-container">
       <button class="hamburger-menu" aria-label="Open Menu"></button>
