--- a/css/styles.css
+++ b/css/styles.css
@@ -2,6 +2,7 @@
   --slate: #111926;
   --hoverSlate: #292e37;
   --text: #656565;
+  --textLight: #a2a2a2;
   --bg: #fafafd;
   --disabled: #ccc;
 }
@@ -177,11 +178,32 @@ header.scrolled {
 }
 
 footer {
-  background-color: #f8f8f8;
+  background-color: var(--slate);
   text-align: center;
-  color: var(--text);
+  color: var(--textLight);
   font-size: 0.7rem;
-  padding: 50px 0 10px 0;
+  padding: 40px 0 10px 0;
+}
+
+.social-icons {
+  display: flex;
+  justify-content: center;
+  gap: 20px;
+  margin-bottom: 40px;
+
+  & .social-icon {
+    display: flex;
+    height: 30px;
+    width: 30px;
+    opacity: 0.7;
+    transition: all 0.3s ease-in-out;
+
+    &:hover {
+      opacity: 1;
+      transform: scale(1.08);
+      transition: all 0.3s ease-in-out;
+    }
+  }
 }
 
 .hero-container {
