working on search modal

--- a/components/header.html
+++ b/components/header.html
@@ -43,4 +43,14 @@
       </li>
     </ul>
   </nav>
+  <div id="search-modal" class="modal">
+    <div class="modal-content">
+      <span class="close-btn">&times;</span>
+      <input
+        type="text"
+        id="search-input"
+        placeholder="Search for articles..."
+      />
+    </div>
+  </div>
 </header>
