--- a/css/styles.css
+++ b/css/styles.css
@@ -360,6 +360,63 @@ footer {
   }
 }
 
+.modal {
+  display: none;
+  position: fixed;
+  z-index: 1000;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgba(0, 0, 0, 0.8);
+
+  &.active {
+    display: block;
+  }
+}
+
+.modal-content {
+  position: relative;
+  background-color: #fff;
+  max-width: min(960px, 80vw);
+  margin: 15% auto;
+  border-radius: 5px;
+  padding: 20px;
+  border: 1px solid var(--slate);
+  display: flex;
+
+  & input {
+    flex-grow: 1;
+    padding: 10px;
+    margin: 20px 0 10px 0;
+    border: none;
+    border-bottom: 1px solid var(--slate);
+    font-weight: 300;
+
+    &:focus {
+      outline: none;
+    }
+  }
+}
+
+.close-btn {
+  position: absolute;
+  top: 20px;
+  right: 20px;
+  color: #000;
+  float: right;
+  font-size: 1.8rem;
+  line-height: 1rem;
+  font-weight: 300;
+}
+
+.close-btn:hover,
+.close-btn:focus {
+  text-decoration: none;
+  cursor: pointer;
+}
+
 @media screen and (min-width: 769px) {
   header {
     position: sticky;
