working on search modal

--- a/css/styles.css
+++ b/css/styles.css
@@ -210,7 +210,7 @@ footer {
   max-width: 960px;
   display: grid;
   margin: 1.5em auto;
-  padding: 0 10px;
+  padding: 30px 10px;
   color: var(--slate);
   font-size: 1.1rem;
   font-weight: 300;
