finishing up search functionality

--- a/components/header.html
+++ b/components/header.html
@@ -51,6 +51,11 @@
         id="search-input"
         placeholder="Search for articles..."
       />
+      <!-- Template for search results -->
+      <div class="search-result-template" style="display: none">
+        <a href="" class="search-result"></a>
+      </div>
+      <!-- The actual search results will be appended here -->
     </div>
   </div>
 </header>
