--- a/components/header.html
+++ b/components/header.html
@@ -55,7 +55,10 @@
       <div class="search-result-template" style="display: none">
         <a href="" class="search-result"></a>
       </div>
-      <!-- The actual search results will be appended here -->
+      <!-- Search results will be appended here -->
     </div>
+  </div>
+  <div id="error-toast" class="error-toast">
+    <!-- Error toast -->
   </div>
 </header>
