--- a/components/header.html
+++ b/components/header.html
@@ -43,6 +43,7 @@
       </li>
     </ul>
   </nav>
+
   <div id="search-modal" class="modal">
     <div class="modal-content">
       <span class="close-btn">&times;</span>
@@ -51,13 +52,15 @@
         id="search-input"
         placeholder="Search for articles..."
       />
-      <!-- Template for search results -->
-      <div class="search-result-template" style="display: none">
-        <a href="" class="search-result"></a>
+      <div class="search-results-container">
+        <!-- This template should always remain in the DOM -->
+        <div class="search-result-template" style="display: none">
+          <div class="search-result"></div>
+        </div>
       </div>
-      <!-- Search results will be appended here -->
     </div>
   </div>
+
   <div id="error-toast" class="error-toast">
     <!-- Error toast -->
   </div>
